Se agrego extracccion de texto medinate OCR con Tesseract y se actyualizo el readme.